<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_hint">Enter login</string>
    <string name="password_hint">Enter password</string>
    <string name="clean">Clean</string>
    <string name="img_lock_description">Lock images</string>

</resources>
